Fix Java 8 compatibility issues
Replace Java 9+ Set.of() with Guava ImmutableSet.of() for Java 8 compatibility.
Replace Guava 28+ buildOrThrow() with build() for Guava 23.1 compatibility.

Changes:
- Inliner.java: Add ImmutableSet import, use ImmutableSet.of() for IMPURE_FUNCTION_NAMES
- ModeAnalyzer.java: Replace Set.of() with ImmutableSet.of() in 6 locations
- VarEnvironment.java: Replace buildOrThrow() with build()

All 352 tests pass with these changes.